# docframe

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLIC_ALPHA.md  README.md  SECURITY.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  pages.yml  publish.yml
docframe/: __init__.py  __main__.py  adapters.py  cli.py  core.py  llm.py  models.py  registry.py  utils.py  writers.py
docs/: docframe_architecture.md  pypi_publish.md
examples/: __init__.py  docframe_quickstart.py  linkedin_demo.py  sample.csv
scripts/: collect_files.py  collect_pdfs.py  validate_corpus.py
site/: app.js  index.html  styles.css
tests/: test_docframe.py
