[project]
name = "docframe-ai"
version = "0.2.0"
description = "A Python framework for normalizing PDFs, Word files, CSV, Excel, JPG, and PNG into AI-ready document chunks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Meet Jethwa" },
]
keywords = ["documents", "pdf", "docx", "excel", "csv", "ocr", "rag", "ai", "etl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Text Processing",
]
dependencies = [
  "openpyxl>=3.1.0",
  "pillow>=10.0.0",
  "pydantic>=2.6.0",
  "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "python-docx>=1.1.0",
]

[project.scripts]
docframe = "docframe.cli:main"

[project.urls]
Homepage = "https://github.com/Meet2147/docframe"
Source = "https://github.com/Meet2147/docframe"
Issues = "https://github.com/Meet2147/docframe/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["docframe*"]

[tool.ruff]
line-length = 100
target-version = "py311"
